force-app/main/default/objects/AI_Context_Policy__mdt/AI_Context_Policy__mdt.object-meta.xml
<CustomObject>
    <label>AI Context Policy</label>
    <pluralLabel>AI Context Policies</pluralLabel>
</CustomObject>