force-app/main/default/objects/AI_Context_Policy__mdt/fields/Allowed_Fields__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Fields__c</fullName>
    <description
  >Comma-separated field API name allowlist - the only fields IntelligenceContextService.buildContext() may include for this object/use case. Never a wildcard.</description>
    <label>Allowed Fields</label>
    <length>800</length>
    <type>Text</type>
    <required>true</required>
</CustomField>