force-app/main/default/objects/AI_Context_Policy__mdt/fields/Allowed_Object__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Object__c</fullName>
    <description
  >One CMDT row per (Use_Case_Key__c, Allowed_Object__c) pair - IntelligenceContextService.buildContext() only ever reads a field on this object if it's also named in Allowed_Fields__c below.</description>
    <label>Allowed Object</label>
    <length>80</length>
    <type>Text</type>
    <required>true</required>
</CustomField>