force-app/main/default/objects/AI_Context_Policy__mdt/fields/Redact_Fields__c.field-meta.xml
<CustomField>
    <fullName>Redact_Fields__c</fullName>
    <description
  >Comma-separated subset of Allowed_Fields__c whose value is replaced with a redaction marker rather than its real value - for fields needed for shape/structure but not their literal content.</description>
    <label>Redact Fields</label>
    <length>800</length>
    <type>Text</type>
</CustomField>